--- a/src/view.html
+++ b/src/view.html
@@ -9,9 +9,17 @@
 </head>
 <body>
     <div class="main">
-        <div>
+        <div class="banner">
             <!--picture loop-->
-
+            <a href="">
+                <div class="banner-slide slide1"></div>
+            </a>
+            <a href="">
+                <div class="banner-slide slide2"></div>
+            </a>
+            <a href="">
+                <div class="banner-slide slide3"></div>
+            </a>
         </div>
     </div>
     
