*style.css *view.html
+switch picture buttons

--- a/src/view.html
+++ b/src/view.html
@@ -21,6 +21,11 @@
                 <div class="banner-slide slide3"></div>
             </a>
         </div>
+
+        <!--switch picture buttom-->
+        <a href="" class="button prev"></a>
+        <a href="" class="button next"></a>
+
     </div>
     
 </body>
