*style.css *view.html
+dots

--- a/src/view.html
+++ b/src/view.html
@@ -25,7 +25,12 @@
         <!--switch picture buttom-->
         <a href="" class="button prev"></a>
         <a href="" class="button next"></a>
-
+        <!--dots-->>
+        <div class="dots">
+            <span class="active"></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
     
 </body>
