--- a/src/view.html
+++ b/src/view.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="main">
-        <div class="banner">
+    <div class="main" id="main">
+        <div class="banner" id="banner">
             <!--picture loop-->
             <a href="">
                 <div class="banner-slide slide1"></div>
@@ -32,6 +32,6 @@
             <span></span>
         </div>
     </div>
-    
+    <script src="js/script.js"></script>
 </body>
 </html>
