--- a/src/view.html
+++ b/src/view.html
@@ -12,7 +12,7 @@
         <div class="banner" id="banner">
             <!--picture loop-->
             <a href="">
-                <div class="banner-slide slide1"></div>
+                <div class="banner-slide slide1 slide-active"></div>
             </a>
             <a href="">
                 <div class="banner-slide slide2"></div>
