*script.js *view.html
dots feature implemented

--- a/src/view.html
+++ b/src/view.html
@@ -26,7 +26,7 @@
         <a href="" class="button prev"></a>
         <a href="" class="button next"></a>
         <!--dots-->>
-        <div class="dots">
+        <div class="dots" id="dots">
             <span class="active"></span>
             <span></span>
             <span></span>
