*script.js *view.html
previous and next button implemented

--- a/src/view.html
+++ b/src/view.html
@@ -23,8 +23,8 @@
         </div>
 
         <!--switch picture buttom-->
-        <a href="" class="button prev"></a>
-        <a href="" class="button next"></a>
+        <a href="javascript:void(0)" class="button prev" id="prev"></a>
+        <a href="javascript:void(0)" class="button next" id="next"></a>
         <!--dots-->>
         <div class="dots" id="dots">
             <span class="active"></span>
@@ -35,3 +35,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
