*view.html *style.css
create div for main menu

--- a/src/view.html
+++ b/src/view.html
@@ -11,6 +11,31 @@
 
 <body>
     <div class="main" id="main">
+        <div class="menu-box"></div>
+        <!--main menu-->
+        <div class="menu-content">
+            <div class="menu-item">
+                <a href="">
+                    <span>phone accessories</span>
+                </a>
+            </div>
+            <div class="menu-item">
+                <a href="">
+                    <span>computers</span>
+                </a>
+            </div>
+            <div class="menu-item">
+                <a href="">
+                    <span>home device</span>
+                </a>
+            </div>
+            <div class="menu-item">
+                <a href="">
+                    <span>funiture</span>
+                </a>
+            </div>
+
+        </div>
         <div class="banner" id="banner">
             <!--picture loop-->
             <a href="">
