*view.html *style.css
main menu impletmented

--- a/src/view.html
+++ b/src/view.html
@@ -16,7 +16,7 @@
         <div class="menu-content">
             <div class="menu-item">
                 <a href="">
-                    <span>phone accessories</span>
+                    <span>accessories</span>
                 </a>
             </div>
             <div class="menu-item">
