*style.css *view.html
sub-menu postion done

--- a/src/view.html
+++ b/src/view.html
@@ -12,6 +12,12 @@
 <body>
     <div class="main" id="main">
         <div class="menu-box"></div>
+        <!--sub menu-->
+        <div class="sub-menu">
+            <div class="inner-box">
+                
+            </div>
+        </div>
         <!--main menu-->
         <div class="menu-content">
             <div class="menu-item">
