*style.css *view.html
sub-menu information done, next step js for logic

--- a/src/view.html
+++ b/src/view.html
@@ -13,10 +13,121 @@
     <div class="main" id="main">
         <div class="menu-box"></div>
         <!--sub menu-->
-        <div class="sub-menu">
+        <div class="sub-menu hide">
+            <!--accessories-->
             <div class="inner-box">
-                
+                <div class="sub-inner-box">
+                    <div class="title">phone</div>
+                    <div class="sub-row">
+                        <span class="bold mr10">phone</span>
+                        <a href="">Iphone</a>
+                        <span>/</span>
+                        <a href="">Android</a>
+                        <span>/</span>
+                        <a href="">other</a>
+                    </div>
+                    <div class="sub-row">
+                        <span class="bold mr10">accessories</span>
+                        <a href="">battery</a>
+                        <span>/</span>
+                        <a href="">earphone</a>
+                        <span>/</span>
+                        <a href="">micphone</a>
+                    </div>
+                    <div class="sub-row">
+                        <span class="bold mr10">company</span>
+                        <a href="">Fido</a>
+                        <span>/</span>
+                        <a href="">Rogers</a>
+                        <span>/</span>
+                        <a href="">Freedom</a>
+                    </div>
+                </div>
             </div>
+
+            <div class="inner-box">
+                <div class="sub-inner-box">
+                    <div class="title">computers</div>
+                    <div class="sub-row">
+                        <span class="bold mr10">computers</span>
+                        <a href="">DELL</a>
+                        <span>/</span>
+                        <a href="">HP</a>
+                        <span>/</span>
+                        <a href="">other</a>
+                    </div>
+                    <div class="sub-row">
+                        <span class="bold mr10">accessories</span>
+                        <a href="">keyboard</a>
+                        <span>/</span>
+                        <a href="">mouse</a>
+                        <span>/</span>
+                        <a href="">micphone</a>
+                    </div>
+                    <div class="sub-row">
+                        <span class="bold mr10">cleaning</span>
+                        <a href="">keyboard clean</a>
+                        <span>/</span>
+                        <a href="">full clean</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="inner-box">
+                <div class="sub-inner-box">
+                    <div class="title">Home Device</div>
+                    <div class="sub-row">
+                        <span class="bold mr10">Kitchen</span>
+                        <a href="">dish washer</a>
+                        <span>/</span>
+                        <a href="">fridge</a>
+                        <span>/</span>
+                        <a href="">stove</a>
+                    </div>
+                    <div class="sub-row">
+                        <span class="bold mr10">living room</span>
+                        <a href="">clean robot</a>
+                        <span>/</span>
+                        <a href="">telephone</a>
+                        <span>/</span>
+                        <a href="">charger</a>
+                    </div>
+                    <div class="sub-row">
+                        <span class="bold mr10">other</span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="inner-box">
+                <div class="sub-inner-box">
+                    <div class="title">funiture</div>
+                    <div class="sub-row">
+                        <span class="bold mr10">living room</span>
+                        <a href="">sofa</a>
+                        <span>/</span>
+                        <a href="">table</a>
+                        <span>/</span>
+                        <a href="">other</a>
+                    </div>
+                    <div class="sub-row">
+                        <span class="bold mr10">study</span>
+                        <a href="">desk</a>
+                        <span>/</span>
+                        <a href="">chair</a>
+                        <span>/</span>
+                    </div>
+                    <div class="sub-row">
+                        <span class="bold mr10">bed</span>
+                        <a href="">queen</a>
+                        <span>/</span>
+                        <a href="">king</a>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
         <!--main menu-->
         <div class="menu-content">
