--- a/src/view.html
+++ b/src/view.html
@@ -13,7 +13,7 @@
     <div class="main" id="main">
         <div class="menu-box"></div>
         <!--sub menu-->
-        <div class="sub-menu hide">
+        <div class="sub-menu hide" id="sub-menu">
             <!--accessories-->
             <div class="inner-box">
                 <div class="sub-inner-box">
@@ -130,7 +130,7 @@
 
         </div>
         <!--main menu-->
-        <div class="menu-content">
+        <div class="menu-content" id="menu-content">
             <div class="menu-item">
                 <a href="">
                     <span>accessories</span>
